// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots renders a custom empty state message 1`] = `
[
  <span
    aria-busy={false}
    className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
    onClick={[Function]}
  >
    <input
      aria-autocomplete="both"
      aria-controls="autocompleteId-listbox"
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="autocompleteId-listbox"
      autoComplete="off"
      className="Input"
      data-component="input"
      id="autocompleteId"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      role="combobox"
      type="text"
    />
  </span>,
  <span
    className="InternalVisuallyHidden"
  >
    <div>
      <div
        className="EmptyStateWrapper"
      >
        No results
      </div>
    </div>
  </span>,
]
`;

exports[`snapshots renders a loading state 1`] = `
[
  <span
    aria-busy={false}
    className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
    onClick={[Function]}
  >
    <input
      aria-autocomplete="both"
      aria-controls="autocompleteId-listbox"
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="autocompleteId-listbox"
      autoComplete="off"
      className="Input"
      data-component="input"
      id="autocompleteId"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      role="combobox"
      type="text"
    />
  </span>,
  <span
    className="InternalVisuallyHidden"
  >
    <div
      className="SpinnerWrapper"
    >
      <span
        className="Box"
      >
        <svg
          aria-hidden={true}
          aria-labelledby=":r2h:"
          className="SpinnerAnimation"
          fill="none"
          height="32px"
          viewBox="0 0 16 16"
          width="32px"
        >
          <circle
            cx="8"
            cy="8"
            r="7"
            stroke="currentColor"
            strokeOpacity="0.25"
            strokeWidth="2"
            vectorEffect="non-scaling-stroke"
          />
          <path
            d="M15 8a7.002 7.002 0 00-7-7"
            stroke="currentColor"
            strokeLinecap="round"
            strokeWidth="2"
            vectorEffect="non-scaling-stroke"
          />
        </svg>
        <span
          className="VisuallyHidden"
          id=":r2h:"
        >
          Loading
        </span>
      </span>
    </div>
  </span>,
]
`;

exports[`snapshots renders a menu that contains an item to add to the menu 1`] = `
[
  @media (forced-colors:active) {

}

@media (forced-colors:active) {

}

@media (forced-colors:active) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (forced-colors:active) {

}

@media (hover:hover) and (pointer:fine) {

}

<span
    aria-busy={false}
    className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
    onClick={[Function]}
  >
    <input
      aria-autocomplete="both"
      aria-controls="autocompleteId-listbox"
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="autocompleteId-listbox"
      autoComplete="off"
      className="Input"
      data-component="input"
      id="autocompleteId"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      role="combobox"
      type="text"
    />
  </span>,
  .c3 {
  height: 20px;
  max-width: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 8px;
  color: var(--fgColor-muted,var(--color-fg-muted,#656d76));
  min-width: 16px;
}

.c4 {
  border-color: var(--control-borderColor-emphasis);
  border-style: solid;
  border-width: 1px;
  border-radius: 3px;
  cursor: pointer;
  display: grid;
  height: var(--base-size-16,16px);
  margin: 0;
  place-content: center;
  width: var(--base-size-16,16px);
  background-color: var(--bgColor-default,var(--color-canvas-default,#ffffff));
  -webkit-transition: background-color,border-color 80ms cubic-bezier(0.32,0,0.67,0) 0ms;
  transition: background-color,border-color 80ms cubic-bezier(0.32,0,0.67,0) 0ms;
}

.c4::before {
  width: var(--base-size-16,16px);
  height: var(--base-size-16,16px);
  visibility: hidden;
  content: "";
  background-color: var(--fgColor-onEmphasis,var(--color-fg-on-emphasis,#ffffff));
  -webkit-transition: visibility 0s linear 230ms;
  transition: visibility 0s linear 230ms;
  -webkit-clip-path: inset(var(--base-size-16,16px) 0 0 0);
  clip-path: inset(var(--base-size-16,16px) 0 0 0);
  -webkit-mask-image: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTIiIGhlaWdodD0iOSIgdmlld0JveD0iMCAwIDEyIDkiIGZpbGw9Im5vbmUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CjxwYXRoIGZpbGwtcnVsZT0iZXZlbm9kZCIgY2xpcC1ydWxlPSJldmVub2RkIiBkPSJNMTEuNzgwMyAwLjIxOTYyNUMxMS45MjEgMC4zNjA0MjcgMTIgMC41NTEzMDUgMTIgMC43NTAzMTNDMTIgMC45NDkzMjEgMTEuOTIxIDEuMTQwMTkgMTEuNzgwMyAxLjI4MUw0LjUxODYgOC41NDA0MkM0LjM3Nzc1IDguNjgxIDQuMTg2ODIgOC43NiAzLjk4Nzc0IDguNzZDMy43ODg2NyA4Ljc2IDMuNTk3NzMgOC42ODEgMy40NTY4OSA4LjU0MDQyTDAuMjAxNjIyIDUuMjg2MkMwLjA2ODkyNzcgNS4xNDM4MyAtMC4wMDMzMDkwNSA0Ljk1NTU1IDAuMDAwMTE2NDkzIDQuNzYwOThDMC4wMDM1NTIwNSA0LjU2NjQzIDAuMDgyMzg5NCA0LjM4MDgxIDAuMjIwMDMyIDQuMjQzMjFDMC4zNTc2NjUgNC4xMDU2MiAwLjU0MzM1NSA0LjAyNjgxIDAuNzM3OTcgNC4wMjMzOEMwLjkzMjU4NCA0LjAxOTk0IDEuMTIwOTMgNC4wOTIxNyAxLjI2MzM0IDQuMjI0ODJMMy45ODc3NCA2Ljk0ODM1TDEwLjcxODYgMC4yMTk2MjVDMTAuODU5NSAwLjA3ODk5MjMgMTEuMDUwNCAwIDExLjI0OTUgMEMxMS40NDg1IDAgMTEuNjM5NSAwLjA3ODk5MjMgMTEuNzgwMyAwLjIxOTYyNVoiIGZpbGw9IndoaXRlIi8+Cjwvc3ZnPgo=');
  mask-image: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTIiIGhlaWdodD0iOSIgdmlld0JveD0iMCAwIDEyIDkiIGZpbGw9Im5vbmUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CjxwYXRoIGZpbGwtcnVsZT0iZXZlbm9kZCIgY2xpcC1ydWxlPSJldmVub2RkIiBkPSJNMTEuNzgwMyAwLjIxOTYyNUMxMS45MjEgMC4zNjA0MjcgMTIgMC41NTEzMDUgMTIgMC43NTAzMTNDMTIgMC45NDkzMjEgMTEuOTIxIDEuMTQwMTkgMTEuNzgwMyAxLjI4MUw0LjUxODYgOC41NDA0MkM0LjM3Nzc1IDguNjgxIDQuMTg2ODIgOC43NiAzLjk4Nzc0IDguNzZDMy43ODg2NyA4Ljc2IDMuNTk3NzMgOC42ODEgMy40NTY4OSA4LjU0MDQyTDAuMjAxNjIyIDUuMjg2MkMwLjA2ODkyNzcgNS4xNDM4MyAtMC4wMDMzMDkwNSA0Ljk1NTU1IDAuMDAwMTE2NDkzIDQuNzYwOThDMC4wMDM1NTIwNSA0LjU2NjQzIDAuMDgyMzg5NCA0LjM4MDgxIDAuMjIwMDMyIDQuMjQzMjFDMC4zNTc2NjUgNC4xMDU2MiAwLjU0MzM1NSA0LjAyNjgxIDAuNzM3OTcgNC4wMjMzOEMwLjkzMjU4NCA0LjAxOTk0IDEuMTIwOTMgNC4wOTIxNyAxLjI2MzM0IDQuMjI0ODJMMy45ODc3NCA2Ljk0ODM1TDEwLjcxODYgMC4yMTk2MjVDMTAuODU5NSAwLjA3ODk5MjMgMTEuMDUwNCAwIDExLjI0OTUgMEMxMS40NDg1IDAgMTEuNjM5NSAwLjA3ODk5MjMgMTEuNzgwMyAwLjIxOTYyNVoiIGZpbGw9IndoaXRlIi8+Cjwvc3ZnPgo=');
  -webkit-mask-size: 75%;
  mask-size: 75%;
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
  -webkit-mask-position: center;
  mask-position: center;
  -webkit-animation: checkmarkOut 80ms cubic-bezier(0.65,0,0.35,1) forwards;
  animation: checkmarkOut 80ms cubic-bezier(0.65,0,0.35,1) forwards;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
}

.c6 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 400;
  word-break: break-word;
  line-height: 20px;
}

.c7 {
  font-size: 12px;
  line-height: 16px;
  color: var(--fgColor-attention,var(--color-attention-fg,#9a6700));
}

.c8 {
  height: 20px;
  max-width: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 8px;
  color: var(--fgColor-muted,var(--color-fg-muted,#656d76));
}

.c8 svg {
  font-size: 12px;
}

[data-variant="danger"]:not([aria-disabled]):not([data-inactive]):hover .c2,
[data-variant="danger"]:active .c8 {
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
  padding-right: 8px;
  font-size: 14px;
  padding-top: 6px;
  padding-bottom: 6px;
  line-height: 16px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
}

.c1[data-loading] {
  cursor: default;
}

.c1[aria-disabled],
.c1[data-inactive] {
  cursor: not-allowed;
}

.c1[aria-disabled] [data-component="ActionList.Checkbox"],
.c1[data-inactive] [data-component="ActionList.Checkbox"] {
  cursor: not-allowed;
  background-color: var(--control-bgColor-disabled,rgba(175,184,193,0.2));
  border-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c1[aria-disabled] [data-component="ActionList.Selection"],
.c1[data-inactive] [data-component="ActionList.Selection"] {
  color: var(--fgColor-disabled,var(--color-primer-fg-disabled,#8c959f));
}

.c1 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c1 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c1:not(:first-of-type) {
  --divider-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
}

[data-component="ActionList.Divider"] + .c0 {
  --divider-color: transparent !important;
}

.c1:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]),
.c1[data-focus-visible-added]:not([aria-disabled]):not([data-inactive]) {
  --divider-color: transparent;
}

.c1:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c0,
.c1[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c1[data-is-active-descendant] {
  font-weight: 400;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c1[data-is-active-descendant]::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

[data-component="ActionList.Divider"] + .c0 {
  --divider-color: transparent !important;
}

.c9:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c0,
.c9[data-focus-visible-added] + li {
  --divider-color: transparent;
}

@media (forced-colors:active) {
  .c4 {
    border-width: 1px;
  }
}

@media (forced-colors:active) {

}

@media (forced-colors:active) {
  .c1:focus,
  .c1:focus-visible,
  .c1 > a.focus-visible,
  .c1[data-is-active-descendant] {
    outline: solid 1px transparent !important;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c1:hover:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-hover,var(--color-action-list-item-default-hover-bg,rgba(208,215,222,0.32)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
    box-shadow: inset 0 0 0 max(1px,0.0625rem) var(--control-transparent-borderColor-active,var(--color-action-list-item-default-active-border,transparent));
  }

  .c1:focus-visible,
  .c1 > a.focus-visible,
  .c1:focus.focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px var(--focus-outlineColor);
  }

  .c1:active:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-active,var(--color-action-list-item-default-active-bg,rgba(208,215,222,0.48)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  }
}

@media (forced-colors:active) {

}

@media (hover:hover) and (pointer:fine) {

}

<span
    className="InternalVisuallyHidden"
  >
    <div>
      <ul
        aria-labelledby="labelId"
        className="ActionList"
        data-dividers={false}
        data-variant="inset"
        id="autocompleteId-listbox"
        role="listbox"
      >
        <li
          aria-labelledby="0--label  "
          aria-selected={false}
          className="c0 c1"
          data-id="0"
          id="0"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2 c3"
            data-component="ActionList.Selection"
          >
            <div
              className="c2 c4"
              data-component="ActionList.Checkbox"
            />
          </span>
          <div
            className="c2 c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c2 c6"
              id="0--label"
            >
              zero
            </span>
            <span
              className="c2 c7"
            />
          </div>
        </li>
        <li
          aria-labelledby="1--label  "
          aria-selected={false}
          className="c0 c1"
          data-id="1"
          id="1"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2 c3"
            data-component="ActionList.Selection"
          >
            <div
              className="c2 c4"
              data-component="ActionList.Checkbox"
            />
          </span>
          <div
            className="c2 c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c2 c6"
              id="1--label"
            >
              one
            </span>
            <span
              className="c2 c7"
            />
          </div>
        </li>
        <li
          aria-labelledby="2--label  "
          aria-selected={false}
          className="c0 c1"
          data-id="2"
          id="2"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2 c3"
            data-component="ActionList.Selection"
          >
            <div
              className="c2 c4"
              data-component="ActionList.Checkbox"
            />
          </span>
          <div
            className="c2 c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c2 c6"
              id="2--label"
            >
              two
            </span>
            <span
              className="c2 c7"
            />
          </div>
        </li>
        <li
          aria-labelledby="3--label  "
          aria-selected={false}
          className="c0 c1"
          data-id="3"
          id="3"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2 c3"
            data-component="ActionList.Selection"
          >
            <div
              className="c2 c4"
              data-component="ActionList.Checkbox"
            />
          </span>
          <div
            className="c2 c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c2 c6"
              id="3--label"
            >
              three
            </span>
            <span
              className="c2 c7"
            />
          </div>
        </li>
        <li
          aria-labelledby="4--label  "
          aria-selected={false}
          className="c0 c1"
          data-id="4"
          id="4"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2 c3"
            data-component="ActionList.Selection"
          >
            <div
              className="c2 c4"
              data-component="ActionList.Checkbox"
            />
          </span>
          <div
            className="c2 c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c2 c6"
              id="4--label"
            >
              four
            </span>
            <span
              className="c2 c7"
            />
          </div>
        </li>
        <li
          aria-labelledby="5--label  "
          aria-selected={false}
          className="c0 c1"
          data-id="5"
          id="5"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2 c3"
            data-component="ActionList.Selection"
          >
            <div
              className="c2 c4"
              data-component="ActionList.Checkbox"
            />
          </span>
          <div
            className="c2 c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c2 c6"
              id="5--label"
            >
              five
            </span>
            <span
              className="c2 c7"
            />
          </div>
        </li>
        <li
          aria-labelledby="6--label  "
          aria-selected={false}
          className="c0 c1"
          data-id="6"
          id="6"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2 c3"
            data-component="ActionList.Selection"
          >
            <div
              className="c2 c4"
              data-component="ActionList.Checkbox"
            />
          </span>
          <div
            className="c2 c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c2 c6"
              id="6--label"
            >
              six
            </span>
            <span
              className="c2 c7"
            />
          </div>
        </li>
        <li
          aria-labelledby="7--label  "
          aria-selected={false}
          className="c0 c1"
          data-id="7"
          id="7"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2 c3"
            data-component="ActionList.Selection"
          >
            <div
              className="c2 c4"
              data-component="ActionList.Checkbox"
            />
          </span>
          <div
            className="c2 c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c2 c6"
              id="7--label"
            >
              seven
            </span>
            <span
              className="c2 c7"
            />
          </div>
        </li>
        <li
          aria-labelledby="20--label  "
          aria-selected={false}
          className="c0 c1"
          data-id="20"
          id="20"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2 c3"
            data-component="ActionList.Selection"
          >
            <div
              className="c2 c4"
              data-component="ActionList.Checkbox"
            />
          </span>
          <div
            className="c2 c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c2 c6"
              id="20--label"
            >
              twenty
            </span>
            <span
              className="c2 c7"
            />
          </div>
        </li>
        <li
          aria-labelledby="21--label  "
          aria-selected={false}
          className="c0 c1"
          data-id="21"
          id="21"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2 c3"
            data-component="ActionList.Selection"
          >
            <div
              className="c2 c4"
              data-component="ActionList.Checkbox"
            />
          </span>
          <div
            className="c2 c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c2 c6"
              id="21--label"
            >
              twentyone
            </span>
            <span
              className="c2 c7"
            />
          </div>
        </li>
        <li
          aria-labelledby="add-new-item--label  "
          aria-selected={false}
          className="c0 c1"
          data-id="add-new-item"
          id="add-new-item"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2 c3"
            data-component="ActionList.Selection"
          >
            <div
              className="c2 c4"
              data-component="ActionList.Checkbox"
            />
          </span>
          <span
            className="c2 c8"
          >
            <svg
              aria-hidden="true"
              className="octicon octicon-plus"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height={16}
              overflow="visible"
              style={
                {
                  "verticalAlign": "text-bottom",
                }
              }
              viewBox="0 0 16 16"
              width={16}
            >
              <path
                d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 0 1 0 1.5H8.5v4.25a.75.75 0 0 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2Z"
              />
            </svg>
          </span>
          <div
            className="c2 c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c2 c6"
              id="add-new-item--label"
            >
              Add new item
            </span>
            <span
              className="c2 c7"
            />
          </div>
        </li>
      </ul>
    </div>
  </span>,
]
`;

exports[`snapshots renders a multiselect input 1`] = `
[
  @media (forced-colors:active) {

}

@media (forced-colors:active) {

}

@media (hover:hover) and (pointer:fine) {

}

<span
    aria-busy={false}
    className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
    onClick={[Function]}
  >
    <input
      aria-autocomplete="both"
      aria-controls="autocompleteId-listbox"
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="autocompleteId-listbox"
      autoComplete="off"
      className="Input"
      data-component="input"
      id="autocompleteId"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      role="combobox"
      type="text"
    />
  </span>,
  .c2 {
  height: 20px;
  max-width: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 8px;
  color: var(--fgColor-muted,var(--color-fg-muted,#656d76));
  min-width: 16px;
}

.c3 {
  border-color: var(--control-borderColor-emphasis);
  border-style: solid;
  border-width: 1px;
  border-radius: 3px;
  cursor: pointer;
  display: grid;
  height: var(--base-size-16,16px);
  margin: 0;
  place-content: center;
  width: var(--base-size-16,16px);
  background-color: var(--bgColor-default,var(--color-canvas-default,#ffffff));
  -webkit-transition: background-color,border-color 80ms cubic-bezier(0.32,0,0.67,0) 0ms;
  transition: background-color,border-color 80ms cubic-bezier(0.32,0,0.67,0) 0ms;
}

.c3::before {
  width: var(--base-size-16,16px);
  height: var(--base-size-16,16px);
  visibility: hidden;
  content: "";
  background-color: var(--fgColor-onEmphasis,var(--color-fg-on-emphasis,#ffffff));
  -webkit-transition: visibility 0s linear 230ms;
  transition: visibility 0s linear 230ms;
  -webkit-clip-path: inset(var(--base-size-16,16px) 0 0 0);
  clip-path: inset(var(--base-size-16,16px) 0 0 0);
  -webkit-mask-image: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTIiIGhlaWdodD0iOSIgdmlld0JveD0iMCAwIDEyIDkiIGZpbGw9Im5vbmUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CjxwYXRoIGZpbGwtcnVsZT0iZXZlbm9kZCIgY2xpcC1ydWxlPSJldmVub2RkIiBkPSJNMTEuNzgwMyAwLjIxOTYyNUMxMS45MjEgMC4zNjA0MjcgMTIgMC41NTEzMDUgMTIgMC43NTAzMTNDMTIgMC45NDkzMjEgMTEuOTIxIDEuMTQwMTkgMTEuNzgwMyAxLjI4MUw0LjUxODYgOC41NDA0MkM0LjM3Nzc1IDguNjgxIDQuMTg2ODIgOC43NiAzLjk4Nzc0IDguNzZDMy43ODg2NyA4Ljc2IDMuNTk3NzMgOC42ODEgMy40NTY4OSA4LjU0MDQyTDAuMjAxNjIyIDUuMjg2MkMwLjA2ODkyNzcgNS4xNDM4MyAtMC4wMDMzMDkwNSA0Ljk1NTU1IDAuMDAwMTE2NDkzIDQuNzYwOThDMC4wMDM1NTIwNSA0LjU2NjQzIDAuMDgyMzg5NCA0LjM4MDgxIDAuMjIwMDMyIDQuMjQzMjFDMC4zNTc2NjUgNC4xMDU2MiAwLjU0MzM1NSA0LjAyNjgxIDAuNzM3OTcgNC4wMjMzOEMwLjkzMjU4NCA0LjAxOTk0IDEuMTIwOTMgNC4wOTIxNyAxLjI2MzM0IDQuMjI0ODJMMy45ODc3NCA2Ljk0ODM1TDEwLjcxODYgMC4yMTk2MjVDMTAuODU5NSAwLjA3ODk5MjMgMTEuMDUwNCAwIDExLjI0OTUgMEMxMS40NDg1IDAgMTEuNjM5NSAwLjA3ODk5MjMgMTEuNzgwMyAwLjIxOTYyNVoiIGZpbGw9IndoaXRlIi8+Cjwvc3ZnPgo=');
  mask-image: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTIiIGhlaWdodD0iOSIgdmlld0JveD0iMCAwIDEyIDkiIGZpbGw9Im5vbmUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CjxwYXRoIGZpbGwtcnVsZT0iZXZlbm9kZCIgY2xpcC1ydWxlPSJldmVub2RkIiBkPSJNMTEuNzgwMyAwLjIxOTYyNUMxMS45MjEgMC4zNjA0MjcgMTIgMC41NTEzMDUgMTIgMC43NTAzMTNDMTIgMC45NDkzMjEgMTEuOTIxIDEuMTQwMTkgMTEuNzgwMyAxLjI4MUw0LjUxODYgOC41NDA0MkM0LjM3Nzc1IDguNjgxIDQuMTg2ODIgOC43NiAzLjk4Nzc0IDguNzZDMy43ODg2NyA4Ljc2IDMuNTk3NzMgOC42ODEgMy40NTY4OSA4LjU0MDQyTDAuMjAxNjIyIDUuMjg2MkMwLjA2ODkyNzcgNS4xNDM4MyAtMC4wMDMzMDkwNSA0Ljk1NTU1IDAuMDAwMTE2NDkzIDQuNzYwOThDMC4wMDM1NTIwNSA0LjU2NjQzIDAuMDgyMzg5NCA0LjM4MDgxIDAuMjIwMDMyIDQuMjQzMjFDMC4zNTc2NjUgNC4xMDU2MiAwLjU0MzM1NSA0LjAyNjgxIDAuNzM3OTcgNC4wMjMzOEMwLjkzMjU4NCA0LjAxOTk0IDEuMTIwOTMgNC4wOTIxNyAxLjI2MzM0IDQuMjI0ODJMMy45ODc3NCA2Ljk0ODM1TDEwLjcxODYgMC4yMTk2MjVDMTAuODU5NSAwLjA3ODk5MjMgMTEuMDUwNCAwIDExLjI0OTUgMEMxMS40NDg1IDAgMTEuNjM5NSAwLjA3ODk5MjMgMTEuNzgwMyAwLjIxOTYyNVoiIGZpbGw9IndoaXRlIi8+Cjwvc3ZnPgo=');
  -webkit-mask-size: 75%;
  mask-size: 75%;
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
  -webkit-mask-position: center;
  mask-position: center;
  -webkit-animation: checkmarkOut 80ms cubic-bezier(0.65,0,0.35,1) forwards;
  animation: checkmarkOut 80ms cubic-bezier(0.65,0,0.35,1) forwards;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
}

.c5 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 400;
  word-break: break-word;
  line-height: 20px;
}

.c6 {
  font-size: 12px;
  line-height: 16px;
  color: var(--fgColor-attention,var(--color-attention-fg,#9a6700));
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
  padding-right: 8px;
  font-size: 14px;
  padding-top: 6px;
  padding-bottom: 6px;
  line-height: 16px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
}

.c1[data-loading] {
  cursor: default;
}

.c1[aria-disabled],
.c1[data-inactive] {
  cursor: not-allowed;
}

.c1[aria-disabled] [data-component="ActionList.Checkbox"],
.c1[data-inactive] [data-component="ActionList.Checkbox"] {
  cursor: not-allowed;
  background-color: var(--control-bgColor-disabled,rgba(175,184,193,0.2));
  border-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c1[aria-disabled] [data-component="ActionList.Selection"],
.c1[data-inactive] [data-component="ActionList.Selection"] {
  color: var(--fgColor-disabled,var(--color-primer-fg-disabled,#8c959f));
}

.c1 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c1 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c1:not(:first-of-type) {
  --divider-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
}

[data-component="ActionList.Divider"] + .c0 {
  --divider-color: transparent !important;
}

.c1:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]),
.c1[data-focus-visible-added]:not([aria-disabled]):not([data-inactive]) {
  --divider-color: transparent;
}

.c1:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c0,
.c1[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c1[data-is-active-descendant] {
  font-weight: 400;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c1[data-is-active-descendant]::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

@media (forced-colors:active) {
  .c3 {
    border-width: 1px;
  }
}

@media (forced-colors:active) {
  .c1:focus,
  .c1:focus-visible,
  .c1 > a.focus-visible,
  .c1[data-is-active-descendant] {
    outline: solid 1px transparent !important;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c1:hover:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-hover,var(--color-action-list-item-default-hover-bg,rgba(208,215,222,0.32)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
    box-shadow: inset 0 0 0 max(1px,0.0625rem) var(--control-transparent-borderColor-active,var(--color-action-list-item-default-active-border,transparent));
  }

  .c1:focus-visible,
  .c1 > a.focus-visible,
  .c1:focus.focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px var(--focus-outlineColor);
  }

  .c1:active:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-active,var(--color-action-list-item-default-active-bg,rgba(208,215,222,0.48)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  }
}

<span
    className="InternalVisuallyHidden"
  >
    <div>
      <ul
        aria-labelledby="labelId"
        className="ActionList"
        data-dividers={false}
        data-variant="inset"
        id="autocompleteId-listbox"
        role="listbox"
      >
        <li
          aria-labelledby="0--label  "
          aria-selected={false}
          className="c0 c1"
          data-id="0"
          id="0"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          >
            <div
              className="c3"
              data-component="ActionList.Checkbox"
            />
          </span>
          <div
            className="c4"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c5"
              id="0--label"
            >
              zero
            </span>
            <span
              className="c6"
            />
          </div>
        </li>
        <li
          aria-labelledby="1--label  "
          aria-selected={false}
          className="c0 c1"
          data-id="1"
          id="1"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          >
            <div
              className="c3"
              data-component="ActionList.Checkbox"
            />
          </span>
          <div
            className="c4"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c5"
              id="1--label"
            >
              one
            </span>
            <span
              className="c6"
            />
          </div>
        </li>
        <li
          aria-labelledby="2--label  "
          aria-selected={false}
          className="c0 c1"
          data-id="2"
          id="2"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          >
            <div
              className="c3"
              data-component="ActionList.Checkbox"
            />
          </span>
          <div
            className="c4"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c5"
              id="2--label"
            >
              two
            </span>
            <span
              className="c6"
            />
          </div>
        </li>
        <li
          aria-labelledby="3--label  "
          aria-selected={false}
          className="c0 c1"
          data-id="3"
          id="3"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          >
            <div
              className="c3"
              data-component="ActionList.Checkbox"
            />
          </span>
          <div
            className="c4"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c5"
              id="3--label"
            >
              three
            </span>
            <span
              className="c6"
            />
          </div>
        </li>
        <li
          aria-labelledby="4--label  "
          aria-selected={false}
          className="c0 c1"
          data-id="4"
          id="4"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          >
            <div
              className="c3"
              data-component="ActionList.Checkbox"
            />
          </span>
          <div
            className="c4"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c5"
              id="4--label"
            >
              four
            </span>
            <span
              className="c6"
            />
          </div>
        </li>
        <li
          aria-labelledby="5--label  "
          aria-selected={false}
          className="c0 c1"
          data-id="5"
          id="5"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          >
            <div
              className="c3"
              data-component="ActionList.Checkbox"
            />
          </span>
          <div
            className="c4"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c5"
              id="5--label"
            >
              five
            </span>
            <span
              className="c6"
            />
          </div>
        </li>
        <li
          aria-labelledby="6--label  "
          aria-selected={false}
          className="c0 c1"
          data-id="6"
          id="6"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          >
            <div
              className="c3"
              data-component="ActionList.Checkbox"
            />
          </span>
          <div
            className="c4"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c5"
              id="6--label"
            >
              six
            </span>
            <span
              className="c6"
            />
          </div>
        </li>
        <li
          aria-labelledby="7--label  "
          aria-selected={false}
          className="c0 c1"
          data-id="7"
          id="7"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          >
            <div
              className="c3"
              data-component="ActionList.Checkbox"
            />
          </span>
          <div
            className="c4"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c5"
              id="7--label"
            >
              seven
            </span>
            <span
              className="c6"
            />
          </div>
        </li>
        <li
          aria-labelledby="20--label  "
          aria-selected={false}
          className="c0 c1"
          data-id="20"
          id="20"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          >
            <div
              className="c3"
              data-component="ActionList.Checkbox"
            />
          </span>
          <div
            className="c4"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c5"
              id="20--label"
            >
              twenty
            </span>
            <span
              className="c6"
            />
          </div>
        </li>
        <li
          aria-labelledby="21--label  "
          aria-selected={false}
          className="c0 c1"
          data-id="21"
          id="21"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          >
            <div
              className="c3"
              data-component="ActionList.Checkbox"
            />
          </span>
          <div
            className="c4"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c5"
              id="21--label"
            >
              twentyone
            </span>
            <span
              className="c6"
            />
          </div>
        </li>
      </ul>
    </div>
  </span>,
]
`;

exports[`snapshots renders a multiselect input with selected menu items 1`] = `
[
  @media (forced-colors:active) {

}

@media (forced-colors:active) {

}

@media (forced-colors:active) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (forced-colors:active) {

}

@media (hover:hover) and (pointer:fine) {

}

<span
    aria-busy={false}
    className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
    onClick={[Function]}
  >
    <input
      aria-autocomplete="both"
      aria-controls="autocompleteId-listbox"
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="autocompleteId-listbox"
      autoComplete="off"
      className="Input"
      data-component="input"
      id="autocompleteId"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      role="combobox"
      type="text"
    />
  </span>,
  .c2 {
  height: 20px;
  max-width: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 8px;
  color: var(--fgColor-muted,var(--color-fg-muted,#656d76));
  min-width: 16px;
}

.c3 {
  border-color: var(--control-checked-borderColor-rest);
  border-style: solid;
  border-width: 1px;
  border-radius: 3px;
  cursor: pointer;
  display: grid;
  height: var(--base-size-16,16px);
  margin: 0;
  place-content: center;
  width: var(--base-size-16,16px);
  background-color: var(--control-checked-bgColor-rest);
  -webkit-transition: background-color,border-color 80ms cubic-bezier(0.33,1,0.68,1);
  transition: background-color,border-color 80ms cubic-bezier(0.33,1,0.68,1);
}

.c3::before {
  width: var(--base-size-16,16px);
  height: var(--base-size-16,16px);
  visibility: visible;
  content: "";
  background-color: var(--fgColor-onEmphasis,var(--color-fg-on-emphasis,#ffffff));
  -webkit-transition: visibility 0s linear 0s;
  transition: visibility 0s linear 0s;
  -webkit-clip-path: inset(var(--base-size-16,16px) 0 0 0);
  clip-path: inset(var(--base-size-16,16px) 0 0 0);
  -webkit-mask-image: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTIiIGhlaWdodD0iOSIgdmlld0JveD0iMCAwIDEyIDkiIGZpbGw9Im5vbmUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CjxwYXRoIGZpbGwtcnVsZT0iZXZlbm9kZCIgY2xpcC1ydWxlPSJldmVub2RkIiBkPSJNMTEuNzgwMyAwLjIxOTYyNUMxMS45MjEgMC4zNjA0MjcgMTIgMC41NTEzMDUgMTIgMC43NTAzMTNDMTIgMC45NDkzMjEgMTEuOTIxIDEuMTQwMTkgMTEuNzgwMyAxLjI4MUw0LjUxODYgOC41NDA0MkM0LjM3Nzc1IDguNjgxIDQuMTg2ODIgOC43NiAzLjk4Nzc0IDguNzZDMy43ODg2NyA4Ljc2IDMuNTk3NzMgOC42ODEgMy40NTY4OSA4LjU0MDQyTDAuMjAxNjIyIDUuMjg2MkMwLjA2ODkyNzcgNS4xNDM4MyAtMC4wMDMzMDkwNSA0Ljk1NTU1IDAuMDAwMTE2NDkzIDQuNzYwOThDMC4wMDM1NTIwNSA0LjU2NjQzIDAuMDgyMzg5NCA0LjM4MDgxIDAuMjIwMDMyIDQuMjQzMjFDMC4zNTc2NjUgNC4xMDU2MiAwLjU0MzM1NSA0LjAyNjgxIDAuNzM3OTcgNC4wMjMzOEMwLjkzMjU4NCA0LjAxOTk0IDEuMTIwOTMgNC4wOTIxNyAxLjI2MzM0IDQuMjI0ODJMMy45ODc3NCA2Ljk0ODM1TDEwLjcxODYgMC4yMTk2MjVDMTAuODU5NSAwLjA3ODk5MjMgMTEuMDUwNCAwIDExLjI0OTUgMEMxMS40NDg1IDAgMTEuNjM5NSAwLjA3ODk5MjMgMTEuNzgwMyAwLjIxOTYyNVoiIGZpbGw9IndoaXRlIi8+Cjwvc3ZnPgo=');
  mask-image: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTIiIGhlaWdodD0iOSIgdmlld0JveD0iMCAwIDEyIDkiIGZpbGw9Im5vbmUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CjxwYXRoIGZpbGwtcnVsZT0iZXZlbm9kZCIgY2xpcC1ydWxlPSJldmVub2RkIiBkPSJNMTEuNzgwMyAwLjIxOTYyNUMxMS45MjEgMC4zNjA0MjcgMTIgMC41NTEzMDUgMTIgMC43NTAzMTNDMTIgMC45NDkzMjEgMTEuOTIxIDEuMTQwMTkgMTEuNzgwMyAxLjI4MUw0LjUxODYgOC41NDA0MkM0LjM3Nzc1IDguNjgxIDQuMTg2ODIgOC43NiAzLjk4Nzc0IDguNzZDMy43ODg2NyA4Ljc2IDMuNTk3NzMgOC42ODEgMy40NTY4OSA4LjU0MDQyTDAuMjAxNjIyIDUuMjg2MkMwLjA2ODkyNzcgNS4xNDM4MyAtMC4wMDMzMDkwNSA0Ljk1NTU1IDAuMDAwMTE2NDkzIDQuNzYwOThDMC4wMDM1NTIwNSA0LjU2NjQzIDAuMDgyMzg5NCA0LjM4MDgxIDAuMjIwMDMyIDQuMjQzMjFDMC4zNTc2NjUgNC4xMDU2MiAwLjU0MzM1NSA0LjAyNjgxIDAuNzM3OTcgNC4wMjMzOEMwLjkzMjU4NCA0LjAxOTk0IDEuMTIwOTMgNC4wOTIxNyAxLjI2MzM0IDQuMjI0ODJMMy45ODc3NCA2Ljk0ODM1TDEwLjcxODYgMC4yMTk2MjVDMTAuODU5NSAwLjA3ODk5MjMgMTEuMDUwNCAwIDExLjI0OTUgMEMxMS40NDg1IDAgMTEuNjM5NSAwLjA3ODk5MjMgMTEuNzgwMyAwLjIxOTYyNVoiIGZpbGw9IndoaXRlIi8+Cjwvc3ZnPgo=');
  -webkit-mask-size: 75%;
  mask-size: 75%;
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
  -webkit-mask-position: center;
  mask-position: center;
  -webkit-animation: checkmarkIn 80ms cubic-bezier(0.65,0,0.35,1) forwards 80ms;
  animation: checkmarkIn 80ms cubic-bezier(0.65,0,0.35,1) forwards 80ms;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
}

.c5 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 400;
  word-break: break-word;
  line-height: 20px;
}

.c6 {
  font-size: 12px;
  line-height: 16px;
  color: var(--fgColor-attention,var(--color-attention-fg,#9a6700));
}

.c8 {
  border-color: var(--control-borderColor-emphasis);
  border-style: solid;
  border-width: 1px;
  border-radius: 3px;
  cursor: pointer;
  display: grid;
  height: var(--base-size-16,16px);
  margin: 0;
  place-content: center;
  width: var(--base-size-16,16px);
  background-color: var(--bgColor-default,var(--color-canvas-default,#ffffff));
  -webkit-transition: background-color,border-color 80ms cubic-bezier(0.32,0,0.67,0) 0ms;
  transition: background-color,border-color 80ms cubic-bezier(0.32,0,0.67,0) 0ms;
}

.c8::before {
  width: var(--base-size-16,16px);
  height: var(--base-size-16,16px);
  visibility: hidden;
  content: "";
  background-color: var(--fgColor-onEmphasis,var(--color-fg-on-emphasis,#ffffff));
  -webkit-transition: visibility 0s linear 230ms;
  transition: visibility 0s linear 230ms;
  -webkit-clip-path: inset(var(--base-size-16,16px) 0 0 0);
  clip-path: inset(var(--base-size-16,16px) 0 0 0);
  -webkit-mask-image: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTIiIGhlaWdodD0iOSIgdmlld0JveD0iMCAwIDEyIDkiIGZpbGw9Im5vbmUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CjxwYXRoIGZpbGwtcnVsZT0iZXZlbm9kZCIgY2xpcC1ydWxlPSJldmVub2RkIiBkPSJNMTEuNzgwMyAwLjIxOTYyNUMxMS45MjEgMC4zNjA0MjcgMTIgMC41NTEzMDUgMTIgMC43NTAzMTNDMTIgMC45NDkzMjEgMTEuOTIxIDEuMTQwMTkgMTEuNzgwMyAxLjI4MUw0LjUxODYgOC41NDA0MkM0LjM3Nzc1IDguNjgxIDQuMTg2ODIgOC43NiAzLjk4Nzc0IDguNzZDMy43ODg2NyA4Ljc2IDMuNTk3NzMgOC42ODEgMy40NTY4OSA4LjU0MDQyTDAuMjAxNjIyIDUuMjg2MkMwLjA2ODkyNzcgNS4xNDM4MyAtMC4wMDMzMDkwNSA0Ljk1NTU1IDAuMDAwMTE2NDkzIDQuNzYwOThDMC4wMDM1NTIwNSA0LjU2NjQzIDAuMDgyMzg5NCA0LjM4MDgxIDAuMjIwMDMyIDQuMjQzMjFDMC4zNTc2NjUgNC4xMDU2MiAwLjU0MzM1NSA0LjAyNjgxIDAuNzM3OTcgNC4wMjMzOEMwLjkzMjU4NCA0LjAxOTk0IDEuMTIwOTMgNC4wOTIxNyAxLjI2MzM0IDQuMjI0ODJMMy45ODc3NCA2Ljk0ODM1TDEwLjcxODYgMC4yMTk2MjVDMTAuODU5NSAwLjA3ODk5MjMgMTEuMDUwNCAwIDExLjI0OTUgMEMxMS40NDg1IDAgMTEuNjM5NSAwLjA3ODk5MjMgMTEuNzgwMyAwLjIxOTYyNVoiIGZpbGw9IndoaXRlIi8+Cjwvc3ZnPgo=');
  mask-image: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTIiIGhlaWdodD0iOSIgdmlld0JveD0iMCAwIDEyIDkiIGZpbGw9Im5vbmUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CjxwYXRoIGZpbGwtcnVsZT0iZXZlbm9kZCIgY2xpcC1ydWxlPSJldmVub2RkIiBkPSJNMTEuNzgwMyAwLjIxOTYyNUMxMS45MjEgMC4zNjA0MjcgMTIgMC41NTEzMDUgMTIgMC43NTAzMTNDMTIgMC45NDkzMjEgMTEuOTIxIDEuMTQwMTkgMTEuNzgwMyAxLjI4MUw0LjUxODYgOC41NDA0MkM0LjM3Nzc1IDguNjgxIDQuMTg2ODIgOC43NiAzLjk4Nzc0IDguNzZDMy43ODg2NyA4Ljc2IDMuNTk3NzMgOC42ODEgMy40NTY4OSA4LjU0MDQyTDAuMjAxNjIyIDUuMjg2MkMwLjA2ODkyNzcgNS4xNDM4MyAtMC4wMDMzMDkwNSA0Ljk1NTU1IDAuMDAwMTE2NDkzIDQuNzYwOThDMC4wMDM1NTIwNSA0LjU2NjQzIDAuMDgyMzg5NCA0LjM4MDgxIDAuMjIwMDMyIDQuMjQzMjFDMC4zNTc2NjUgNC4xMDU2MiAwLjU0MzM1NSA0LjAyNjgxIDAuNzM3OTcgNC4wMjMzOEMwLjkzMjU4NCA0LjAxOTk0IDEuMTIwOTMgNC4wOTIxNyAxLjI2MzM0IDQuMjI0ODJMMy45ODc3NCA2Ljk0ODM1TDEwLjcxODYgMC4yMTk2MjVDMTAuODU5NSAwLjA3ODk5MjMgMTEuMDUwNCAwIDExLjI0OTUgMEMxMS40NDg1IDAgMTEuNjM5NSAwLjA3ODk5MjMgMTEuNzgwMyAwLjIxOTYyNVoiIGZpbGw9IndoaXRlIi8+Cjwvc3ZnPgo=');
  -webkit-mask-size: 75%;
  mask-size: 75%;
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
  -webkit-mask-position: center;
  mask-position: center;
  -webkit-animation: checkmarkOut 80ms cubic-bezier(0.65,0,0.35,1) forwards;
  animation: checkmarkOut 80ms cubic-bezier(0.65,0,0.35,1) forwards;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
  padding-right: 8px;
  font-size: 14px;
  padding-top: 6px;
  padding-bottom: 6px;
  line-height: 16px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
}

.c1[data-loading] {
  cursor: default;
}

.c1[aria-disabled],
.c1[data-inactive] {
  cursor: not-allowed;
}

.c1[aria-disabled] [data-component="ActionList.Checkbox"],
.c1[data-inactive] [data-component="ActionList.Checkbox"] {
  cursor: not-allowed;
  background-color: var(--fgColor-muted,var(--color-fg-muted,#656d76));
  border-color: var(--fgColor-muted,var(--color-fg-muted,#656d76));
}

.c1[aria-disabled] [data-component="ActionList.Selection"],
.c1[data-inactive] [data-component="ActionList.Selection"] {
  color: var(--fgColor-disabled,var(--color-primer-fg-disabled,#8c959f));
}

.c1 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c1 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c1:not(:first-of-type) {
  --divider-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
}

[data-component="ActionList.Divider"] + .c0 {
  --divider-color: transparent !important;
}

.c1:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]),
.c1[data-focus-visible-added]:not([aria-disabled]):not([data-inactive]) {
  --divider-color: transparent;
}

.c1:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c0,
.c1[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c1[data-is-active-descendant] {
  font-weight: 400;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c1[data-is-active-descendant]::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

.c7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
  padding-right: 8px;
  font-size: 14px;
  padding-top: 6px;
  padding-bottom: 6px;
  line-height: 16px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
}

.c7[data-loading] {
  cursor: default;
}

.c7[aria-disabled],
.c7[data-inactive] {
  cursor: not-allowed;
}

.c7[aria-disabled] [data-component="ActionList.Checkbox"],
.c7[data-inactive] [data-component="ActionList.Checkbox"] {
  cursor: not-allowed;
  background-color: var(--control-bgColor-disabled,rgba(175,184,193,0.2));
  border-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c7[aria-disabled] [data-component="ActionList.Selection"],
.c7[data-inactive] [data-component="ActionList.Selection"] {
  color: var(--fgColor-disabled,var(--color-primer-fg-disabled,#8c959f));
}

.c7 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c7 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c7:not(:first-of-type) {
  --divider-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
}

[data-component="ActionList.Divider"] + .c0 {
  --divider-color: transparent !important;
}

.c7:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]),
.c7[data-focus-visible-added]:not([aria-disabled]):not([data-inactive]) {
  --divider-color: transparent;
}

.c7:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c0,
.c7[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c7[data-is-active-descendant] {
  font-weight: 400;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c7[data-is-active-descendant]::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

@media (forced-colors:active) {
  .c3 {
    border-width: 8px;
  }
}

@media (forced-colors:active) {
  .c8 {
    border-width: 1px;
  }
}

@media (forced-colors:active) {
  .c1:focus,
  .c1:focus-visible,
  .c1 > a.focus-visible,
  .c1[data-is-active-descendant] {
    outline: solid 1px transparent !important;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c1:hover:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-hover,var(--color-action-list-item-default-hover-bg,rgba(208,215,222,0.32)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
    box-shadow: inset 0 0 0 max(1px,0.0625rem) var(--control-transparent-borderColor-active,var(--color-action-list-item-default-active-border,transparent));
  }

  .c1:focus-visible,
  .c1 > a.focus-visible,
  .c1:focus.focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px var(--focus-outlineColor);
  }

  .c1:active:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-active,var(--color-action-list-item-default-active-bg,rgba(208,215,222,0.48)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  }
}

@media (forced-colors:active) {
  .c7:focus,
  .c7:focus-visible,
  .c7 > a.focus-visible,
  .c7[data-is-active-descendant] {
    outline: solid 1px transparent !important;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c7:hover:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-hover,var(--color-action-list-item-default-hover-bg,rgba(208,215,222,0.32)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
    box-shadow: inset 0 0 0 max(1px,0.0625rem) var(--control-transparent-borderColor-active,var(--color-action-list-item-default-active-border,transparent));
  }

  .c7:focus-visible,
  .c7 > a.focus-visible,
  .c7:focus.focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px var(--focus-outlineColor);
  }

  .c7:active:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-active,var(--color-action-list-item-default-active-bg,rgba(208,215,222,0.48)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  }
}

<span
    className="InternalVisuallyHidden"
  >
    <div>
      <ul
        aria-labelledby="labelId"
        className="ActionList"
        data-dividers={false}
        data-variant="inset"
        id="autocompleteId-listbox"
        role="listbox"
      >
        <li
          aria-labelledby="0--label  "
          aria-selected={true}
          className="c0 c1"
          data-id="0"
          id="0"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          >
            <div
              className="c3"
              data-component="ActionList.Checkbox"
            />
          </span>
          <div
            className="c4"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c5"
              id="0--label"
            >
              zero
            </span>
            <span
              className="c6"
            />
          </div>
        </li>
        <li
          aria-labelledby="1--label  "
          aria-selected={true}
          className="c0 c1"
          data-id="1"
          id="1"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          >
            <div
              className="c3"
              data-component="ActionList.Checkbox"
            />
          </span>
          <div
            className="c4"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c5"
              id="1--label"
            >
              one
            </span>
            <span
              className="c6"
            />
          </div>
        </li>
        <li
          aria-labelledby="2--label  "
          aria-selected={true}
          className="c0 c1"
          data-id="2"
          id="2"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          >
            <div
              className="c3"
              data-component="ActionList.Checkbox"
            />
          </span>
          <div
            className="c4"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c5"
              id="2--label"
            >
              two
            </span>
            <span
              className="c6"
            />
          </div>
        </li>
        <li
          aria-labelledby="3--label  "
          aria-selected={false}
          className="c0 c7"
          data-id="3"
          id="3"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          >
            <div
              className="c8"
              data-component="ActionList.Checkbox"
            />
          </span>
          <div
            className="c4"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c5"
              id="3--label"
            >
              three
            </span>
            <span
              className="c6"
            />
          </div>
        </li>
        <li
          aria-labelledby="4--label  "
          aria-selected={false}
          className="c0 c7"
          data-id="4"
          id="4"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          >
            <div
              className="c8"
              data-component="ActionList.Checkbox"
            />
          </span>
          <div
            className="c4"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c5"
              id="4--label"
            >
              four
            </span>
            <span
              className="c6"
            />
          </div>
        </li>
        <li
          aria-labelledby="5--label  "
          aria-selected={false}
          className="c0 c7"
          data-id="5"
          id="5"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          >
            <div
              className="c8"
              data-component="ActionList.Checkbox"
            />
          </span>
          <div
            className="c4"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c5"
              id="5--label"
            >
              five
            </span>
            <span
              className="c6"
            />
          </div>
        </li>
        <li
          aria-labelledby="6--label  "
          aria-selected={false}
          className="c0 c7"
          data-id="6"
          id="6"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          >
            <div
              className="c8"
              data-component="ActionList.Checkbox"
            />
          </span>
          <div
            className="c4"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c5"
              id="6--label"
            >
              six
            </span>
            <span
              className="c6"
            />
          </div>
        </li>
        <li
          aria-labelledby="7--label  "
          aria-selected={false}
          className="c0 c7"
          data-id="7"
          id="7"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          >
            <div
              className="c8"
              data-component="ActionList.Checkbox"
            />
          </span>
          <div
            className="c4"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c5"
              id="7--label"
            >
              seven
            </span>
            <span
              className="c6"
            />
          </div>
        </li>
        <li
          aria-labelledby="20--label  "
          aria-selected={false}
          className="c0 c7"
          data-id="20"
          id="20"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          >
            <div
              className="c8"
              data-component="ActionList.Checkbox"
            />
          </span>
          <div
            className="c4"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c5"
              id="20--label"
            >
              twenty
            </span>
            <span
              className="c6"
            />
          </div>
        </li>
        <li
          aria-labelledby="21--label  "
          aria-selected={false}
          className="c0 c7"
          data-id="21"
          id="21"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          >
            <div
              className="c8"
              data-component="ActionList.Checkbox"
            />
          </span>
          <div
            className="c4"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c5"
              id="21--label"
            >
              twentyone
            </span>
            <span
              className="c6"
            />
          </div>
        </li>
      </ul>
    </div>
  </span>,
]
`;

exports[`snapshots renders a single select input 1`] = `
[
  @media (forced-colors:active) {

}

@media (hover:hover) and (pointer:fine) {

}

<span
    aria-busy={false}
    className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
    onClick={[Function]}
  >
    <input
      aria-autocomplete="both"
      aria-controls="autocompleteId-listbox"
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="autocompleteId-listbox"
      autoComplete="off"
      className="Input"
      data-component="input"
      id="autocompleteId"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      role="combobox"
      type="text"
    />
  </span>,
  .c2 {
  height: 20px;
  max-width: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 8px;
  color: var(--fgColor-muted,var(--color-fg-muted,#656d76));
  min-width: 16px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 400;
  word-break: break-word;
  line-height: 20px;
}

.c5 {
  font-size: 12px;
  line-height: 16px;
  color: var(--fgColor-attention,var(--color-attention-fg,#9a6700));
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
  padding-right: 8px;
  font-size: 14px;
  padding-top: 6px;
  padding-bottom: 6px;
  line-height: 16px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
}

.c1[data-loading] {
  cursor: default;
}

.c1[aria-disabled],
.c1[data-inactive] {
  cursor: not-allowed;
}

.c1[aria-disabled] [data-component="ActionList.Checkbox"],
.c1[data-inactive] [data-component="ActionList.Checkbox"] {
  cursor: not-allowed;
  background-color: var(--control-bgColor-disabled,rgba(175,184,193,0.2));
  border-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c1[aria-disabled] [data-component="ActionList.Selection"],
.c1[data-inactive] [data-component="ActionList.Selection"] {
  color: var(--fgColor-disabled,var(--color-primer-fg-disabled,#8c959f));
}

.c1 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c1 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c1:not(:first-of-type) {
  --divider-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
}

[data-component="ActionList.Divider"] + .c0 {
  --divider-color: transparent !important;
}

.c1:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]),
.c1[data-focus-visible-added]:not([aria-disabled]):not([data-inactive]) {
  --divider-color: transparent;
}

.c1:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c0,
.c1[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c1[data-is-active-descendant] {
  font-weight: 400;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c1[data-is-active-descendant]::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

@media (forced-colors:active) {
  .c1:focus,
  .c1:focus-visible,
  .c1 > a.focus-visible,
  .c1[data-is-active-descendant] {
    outline: solid 1px transparent !important;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c1:hover:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-hover,var(--color-action-list-item-default-hover-bg,rgba(208,215,222,0.32)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
    box-shadow: inset 0 0 0 max(1px,0.0625rem) var(--control-transparent-borderColor-active,var(--color-action-list-item-default-active-border,transparent));
  }

  .c1:focus-visible,
  .c1 > a.focus-visible,
  .c1:focus.focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px var(--focus-outlineColor);
  }

  .c1:active:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-active,var(--color-action-list-item-default-active-bg,rgba(208,215,222,0.48)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  }
}

<span
    className="InternalVisuallyHidden"
  >
    <div>
      <ul
        aria-labelledby="labelId"
        className="ActionList"
        data-dividers={false}
        data-variant="inset"
        id="autocompleteId-listbox"
        role="listbox"
      >
        <li
          aria-labelledby="0--label  "
          className="c0 c1"
          data-id="0"
          id="0"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          />
          <div
            className="c3"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4"
              id="0--label"
            >
              zero
            </span>
            <span
              className="c5"
            />
          </div>
        </li>
        <li
          aria-labelledby="1--label  "
          className="c0 c1"
          data-id="1"
          id="1"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          />
          <div
            className="c3"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4"
              id="1--label"
            >
              one
            </span>
            <span
              className="c5"
            />
          </div>
        </li>
        <li
          aria-labelledby="2--label  "
          className="c0 c1"
          data-id="2"
          id="2"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          />
          <div
            className="c3"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4"
              id="2--label"
            >
              two
            </span>
            <span
              className="c5"
            />
          </div>
        </li>
        <li
          aria-labelledby="3--label  "
          className="c0 c1"
          data-id="3"
          id="3"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          />
          <div
            className="c3"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4"
              id="3--label"
            >
              three
            </span>
            <span
              className="c5"
            />
          </div>
        </li>
        <li
          aria-labelledby="4--label  "
          className="c0 c1"
          data-id="4"
          id="4"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          />
          <div
            className="c3"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4"
              id="4--label"
            >
              four
            </span>
            <span
              className="c5"
            />
          </div>
        </li>
        <li
          aria-labelledby="5--label  "
          className="c0 c1"
          data-id="5"
          id="5"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          />
          <div
            className="c3"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4"
              id="5--label"
            >
              five
            </span>
            <span
              className="c5"
            />
          </div>
        </li>
        <li
          aria-labelledby="6--label  "
          className="c0 c1"
          data-id="6"
          id="6"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          />
          <div
            className="c3"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4"
              id="6--label"
            >
              six
            </span>
            <span
              className="c5"
            />
          </div>
        </li>
        <li
          aria-labelledby="7--label  "
          className="c0 c1"
          data-id="7"
          id="7"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          />
          <div
            className="c3"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4"
              id="7--label"
            >
              seven
            </span>
            <span
              className="c5"
            />
          </div>
        </li>
        <li
          aria-labelledby="20--label  "
          className="c0 c1"
          data-id="20"
          id="20"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          />
          <div
            className="c3"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4"
              id="20--label"
            >
              twenty
            </span>
            <span
              className="c5"
            />
          </div>
        </li>
        <li
          aria-labelledby="21--label  "
          className="c0 c1"
          data-id="21"
          id="21"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          />
          <div
            className="c3"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4"
              id="21--label"
            >
              twentyone
            </span>
            <span
              className="c5"
            />
          </div>
        </li>
      </ul>
    </div>
  </span>,
]
`;

exports[`snapshots renders with a custom text input component 1`] = `
[
  @media (forced-colors:active) {

}

@media (hover:hover) and (pointer:fine) {

}

<input
    id="customInput"
    type="text"
  />,
  .c2 {
  height: 20px;
  max-width: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 8px;
  color: var(--fgColor-muted,var(--color-fg-muted,#656d76));
  min-width: 16px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 400;
  word-break: break-word;
  line-height: 20px;
}

.c5 {
  font-size: 12px;
  line-height: 16px;
  color: var(--fgColor-attention,var(--color-attention-fg,#9a6700));
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
  padding-right: 8px;
  font-size: 14px;
  padding-top: 6px;
  padding-bottom: 6px;
  line-height: 16px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
}

.c1[data-loading] {
  cursor: default;
}

.c1[aria-disabled],
.c1[data-inactive] {
  cursor: not-allowed;
}

.c1[aria-disabled] [data-component="ActionList.Checkbox"],
.c1[data-inactive] [data-component="ActionList.Checkbox"] {
  cursor: not-allowed;
  background-color: var(--control-bgColor-disabled,rgba(175,184,193,0.2));
  border-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c1[aria-disabled] [data-component="ActionList.Selection"],
.c1[data-inactive] [data-component="ActionList.Selection"] {
  color: var(--fgColor-disabled,var(--color-primer-fg-disabled,#8c959f));
}

.c1 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c1 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c1:not(:first-of-type) {
  --divider-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
}

[data-component="ActionList.Divider"] + .c0 {
  --divider-color: transparent !important;
}

.c1:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]),
.c1[data-focus-visible-added]:not([aria-disabled]):not([data-inactive]) {
  --divider-color: transparent;
}

.c1:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c0,
.c1[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c1[data-is-active-descendant] {
  font-weight: 400;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c1[data-is-active-descendant]::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

@media (forced-colors:active) {
  .c1:focus,
  .c1:focus-visible,
  .c1 > a.focus-visible,
  .c1[data-is-active-descendant] {
    outline: solid 1px transparent !important;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c1:hover:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-hover,var(--color-action-list-item-default-hover-bg,rgba(208,215,222,0.32)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
    box-shadow: inset 0 0 0 max(1px,0.0625rem) var(--control-transparent-borderColor-active,var(--color-action-list-item-default-active-border,transparent));
  }

  .c1:focus-visible,
  .c1 > a.focus-visible,
  .c1:focus.focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px var(--focus-outlineColor);
  }

  .c1:active:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-active,var(--color-action-list-item-default-active-bg,rgba(208,215,222,0.48)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  }
}

<span
    className="InternalVisuallyHidden"
  >
    <div>
      <ul
        aria-labelledby="labelId"
        className="ActionList"
        data-dividers={false}
        data-variant="inset"
        id="autocompleteId-listbox"
        role="listbox"
      >
        <li
          aria-labelledby="0--label  "
          className="c0 c1"
          data-id="0"
          id="0"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          />
          <div
            className="c3"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4"
              id="0--label"
            >
              zero
            </span>
            <span
              className="c5"
            />
          </div>
        </li>
        <li
          aria-labelledby="1--label  "
          className="c0 c1"
          data-id="1"
          id="1"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          />
          <div
            className="c3"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4"
              id="1--label"
            >
              one
            </span>
            <span
              className="c5"
            />
          </div>
        </li>
        <li
          aria-labelledby="2--label  "
          className="c0 c1"
          data-id="2"
          id="2"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          />
          <div
            className="c3"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4"
              id="2--label"
            >
              two
            </span>
            <span
              className="c5"
            />
          </div>
        </li>
        <li
          aria-labelledby="3--label  "
          className="c0 c1"
          data-id="3"
          id="3"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          />
          <div
            className="c3"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4"
              id="3--label"
            >
              three
            </span>
            <span
              className="c5"
            />
          </div>
        </li>
        <li
          aria-labelledby="4--label  "
          className="c0 c1"
          data-id="4"
          id="4"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          />
          <div
            className="c3"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4"
              id="4--label"
            >
              four
            </span>
            <span
              className="c5"
            />
          </div>
        </li>
        <li
          aria-labelledby="5--label  "
          className="c0 c1"
          data-id="5"
          id="5"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          />
          <div
            className="c3"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4"
              id="5--label"
            >
              five
            </span>
            <span
              className="c5"
            />
          </div>
        </li>
        <li
          aria-labelledby="6--label  "
          className="c0 c1"
          data-id="6"
          id="6"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          />
          <div
            className="c3"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4"
              id="6--label"
            >
              six
            </span>
            <span
              className="c5"
            />
          </div>
        </li>
        <li
          aria-labelledby="7--label  "
          className="c0 c1"
          data-id="7"
          id="7"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          />
          <div
            className="c3"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4"
              id="7--label"
            >
              seven
            </span>
            <span
              className="c5"
            />
          </div>
        </li>
        <li
          aria-labelledby="20--label  "
          className="c0 c1"
          data-id="20"
          id="20"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          />
          <div
            className="c3"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4"
              id="20--label"
            >
              twenty
            </span>
            <span
              className="c5"
            />
          </div>
        </li>
        <li
          aria-labelledby="21--label  "
          className="c0 c1"
          data-id="21"
          id="21"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex={0}
        >
          <span
            className="c2"
            data-component="ActionList.Selection"
          />
          <div
            className="c3"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              className="c4"
              id="21--label"
            >
              twentyone
            </span>
            <span
              className="c5"
            />
          </div>
        </li>
      </ul>
    </div>
  </span>,
]
`;

exports[`snapshots renders with an input value 1`] = `
[
  @media (forced-colors:active) {

}

@media (hover:hover) and (pointer:fine) {

}

<span
    aria-busy={false}
    className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
    onClick={[Function]}
  >
    <input
      aria-autocomplete="both"
      aria-controls="autocompleteId-listbox"
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="autocompleteId-listbox"
      autoComplete="off"
      className="Input"
      data-component="input"
      id="autocompleteId"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      role="combobox"
      type="text"
    />
  </span>,
  @media (forced-colors:active) {

}

@media (hover:hover) and (pointer:fine) {

}

<span
    className="InternalVisuallyHidden"
  >
    <div>
      <div
        className="EmptyStateWrapper"
      >
        No selectable options
      </div>
    </div>
  </span>,
]
`;
